2006-02-21  Per Bothner  <per@bothner.com>

	* testing.scm: Lots of fixes and improvements.
	(test-source-location-cons%): Remove syntax.
	(test-name): Remove test-runner field.
	(group-path): Renamed field to groups-stack.
	(test-%should-execute-test): Now also sets preliminary result-kind.
	(test-runner-group-path): Now implemented using test-runner-group-stack.
	(test-match-any%, test-match-all%): Take variable number of arguments.
	(test-make-predicate%): Remove - use test-asspecifier% instead.
	(test-match-named): Renamed to test-match-name.
	(test-end, test-end%): Reimplement for better error handling/checking.
	(test-runner-result-alist): Renamed to test-result-alist.

2006-01-11  Per Bothner  <per@bothner.com>

	* gui.scm: Move Swing-specific functions to ...
	* swing.scm: ... new file.
	* Makefile.am: Update accordingly.

	* Makefile.am (EXTRA_DIST): Belatedly remove HTTP.scm.

2006-01-10  Per Bothner  <per@bothner.com>

	* HTTP.scm: Moved to gnu/kawa/servlet.
	* Makefile.am: Update accordingly.  Also, do conditionalizing on
	ENABLE_SERVLET consitioning here rather than at top-level.

2006-01-04  Per Bothner  <per@bothner.com>

	* gui.scm (image-read): Generalize to use URI_utils.

2005-12-30  Per Bothner  <per@bothner.com>

	* readtable.scm (define-reader-ctor): New function from SRFI-10.

2005-11-29  Per Bothner  <per@bothner.com>

	* srfi1.scm (cons*): Reimplement using new gnu.lists.LList:consX.

2005-10-24  Per Bothner  <per@bothner.com>

	* testing.scm: Add more Kawa tweaks.
	Add non-basic support for mzscheme.
	(test-source-location-cons%): Now deprecated - not used for Kawa.
	(test-runner-get): New function.
	Use it where appropriate.
	(test-begin): For Kawa, actual definition is now pre-loaded.
	(test-result-ref): Move earlier, as needed for mzscheme.
	(test-source-line2): Now works for mzscheme as well as Kawa.
	(test-assert%): Inline macro into test-assert.
	(test-comp2%): mzscheme needs to define-for-syntax.